After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646056 - $ gnome-control-center background -> I/O warning : failed to load external entity
$ gnome-control-center background -> I/O warning : failed to load external en...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Background
2.91.x
Other Linux
: Normal minor
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-29 09:06 UTC by sangu
Modified: 2011-03-29 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
background: Don't show errors when loading default bg (990 bytes, patch)
2011-03-29 10:09 UTC, Bastien Nocera
committed Details | Review

Description sangu 2011-03-29 09:06:04 UTC
background works well in gnome desktop.
Then, control-center background has strange warning message.
$ gnome-control-center background
I/O warning : failed to load external entity "/usr/local/share/gnome-background-properties/adwaita.xml"

$ gsettings get org.gnome.desktop.background picture-uri
'file:///usr/share/themes/Adwaita/backgrounds/stripes.jpg'

$ rpm -q control-center gnome-themes-standard
control-center-2.91.93-1.fc15.x86_64
gnome-themes-standard-2.91.93-3.fc15.x86_64
Comment 1 Bastien Nocera 2011-03-29 10:09:59 UTC
Created attachment 184558 [details] [review]
background: Don't show errors when loading default bg

Check whether the file exists so we don't get warnings
when loading the default wallpaper on startup.
Comment 2 Rodrigo Moya 2011-03-29 12:00:53 UTC
Review of attachment 184558 [details] [review]:

Looks good
Comment 3 Bastien Nocera 2011-03-29 15:40:05 UTC
Attachment 184558 [details] pushed as d361022 - background: Don't show errors when loading default bg