background: Don't show errors when loading default bg

Check whether the file exists so we don't get warnings
when loading the default wallpaper on startup.

https://bugzilla.gnome.org/show_bug.cgi?id=646056